# YuntuClient

./: .env.example  .gitignore  ARNOLD_VERSION_DETECTION.md  CMakeLists.txt  CMakeLists_Test.txt  GITHUB_ACTIONS_GUIDE.md  GITHUB_SETUP_MACOS.md  MAYA_COMMAND_PLUGIN_DETECTION.md  MAYA_DETECTION_TEST_GUIDE.md  OSS_CONFIG.md  OSS_INTEGRATION_GUIDE.md  PROGRESS.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  USAGE.md  WINDOWS_TEST_GUIDE.md  auto_build.bat  build.sh  build_test.bat  build_test_fixed.bat  build_test_vs2019.bat  check_environment.bat  config.ini.example  eval "$(ssh-agent -s)"  eval "$(ssh-agent -s)".pub  quick_build.bat  test_scene_sample.ma  vcpkg.json  verify_qt.bat
.github/workflows/: build-windows-gui.yml  build-windows.yml
src/: main.cpp  test_main.cpp
src/core/: Application.cpp  Application.h  Config.cpp  Config.h  Logger.cpp  Logger.h
src/managers/: AuthManager.cpp  AuthManager.h  TaskManager.cpp  TaskManager.h  UserManager.cpp  UserManager.h
src/models/: RenderConfig.cpp  RenderConfig.h  Task.cpp  Task.h  User.cpp  User.h
src/network/: ApiService.cpp  ApiService.h  FileUploader.cpp  FileUploader.h  HttpClient.cpp  HttpClient.h  OSSUploader.cpp  OSSUploader.h  WebSocketClient.cpp  WebSocketClient.h
src/services/: LogUploader.cpp  LogUploader.h  MayaDetector.cpp  MayaDetector.h
src/ui/: ThemeManager.cpp  ThemeManager.h
src/ui/components/: FluentButton.cpp  FluentButton.h  FluentCard.cpp  FluentCard.h  FluentDialog.cpp  FluentDialog.h  FluentLineEdit.cpp  FluentLineEdit.h  TaskItemWidget.cpp  TaskItemWidget.h  TitleBar.cpp  TitleBar.h  ToastManager.cpp  ToastManager.h  ToastWidget.cpp  ToastWidget.h
src/ui/views/: CreateTaskDialog.cpp  CreateTaskDialog.h  LoginWindow.cpp  LoginWindow.h  MainWindow.cpp  MainWindow.h  MayaDetectionDialog.cpp  MayaDetectionDialog.h  RegisterDialog.cpp  RegisterDialog.h  TaskDetailDialog.cpp  TaskDetailDialog.h
